@@ -16,6 +16,8 @@
  */
 package org.apache.lucene.search;
 
+import static org.apache.lucene.search.DocIdSetIterator.NO_MORE_DOCS;
+
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.HashMap;
@@ -32,6 +34,8 @@ import org.apache.lucene.document.IntField;
 import org.apache.lucene.index.DirectoryReader;
 import org.apache.lucene.index.IndexReader;
 import org.apache.lucene.index.IndexWriter;
+import org.apache.lucene.index.LeafReaderContext;
+import org.apache.lucene.index.QueryTimeout;
 import org.apache.lucene.index.Term;
 import org.apache.lucene.index.VectorSimilarityFunction;
 import org.apache.lucene.store.Directory;
@@ -475,6 +479,62 @@ abstract class BaseVectorSimilarityQueryTestCase<
     }
   }
 
+  /** Test that the query times out correctly. */
+  public void testTimeout() throws IOException {
+    V[] vectors = getRandomVectors(numDocs, dim);
+    V queryVector = getRandomVector(dim);
+
+    try (Directory indexStore = getIndexStore(vectors);
+        IndexReader reader = DirectoryReader.open(indexStore)) {
+      IndexSearcher searcher = newSearcher(reader);
+
+      // This query is cacheable, explicitly prevent it
+      searcher.setQueryCache(null);
+
+      Query query =
+          new CountingQuery(
+              getVectorQuery(
+                  vectorField,
+                  queryVector,
+                  Float.NEGATIVE_INFINITY,
+                  Float.NEGATIVE_INFINITY,
+                  null));
+
+      assertEquals(numDocs, searcher.count(query)); // Expect some results without timeout
+
+      searcher.setTimeout(() -> true); // Immediately timeout
+      assertEquals(0, searcher.count(query)); // Expect no results with the timeout
+
+      searcher.setTimeout(new CountingQueryTimeout(numDocs - 1)); // Do not score all docs
+      int count = searcher.count(query);
+      assertTrue(
+          "0 < count=" + count + " < numDocs=" + numDocs,
+          count > 0 && count < numDocs); // Expect partial results
+
+      // Test timeout with filter
+      int numFiltered = random().nextInt(numDocs / 2, numDocs);
+      Query filter = IntField.newSetQuery(idField, getFiltered(numFiltered));
+      Query filteredQuery =
+          new CountingQuery(
+              getVectorQuery(
+                  vectorField,
+                  queryVector,
+                  Float.NEGATIVE_INFINITY,
+                  Float.NEGATIVE_INFINITY,
+                  filter));
+
+      searcher.setTimeout(() -> false); // Set a timeout which is never met
+      assertEquals(numFiltered, searcher.count(filteredQuery));
+
+      searcher.setTimeout(
+          new CountingQueryTimeout(numFiltered - 1)); // Timeout before scoring all filtered docs
+      int filteredCount = searcher.count(filteredQuery);
+      assertTrue(
+          "0 < filteredCount=" + filteredCount + " < numFiltered=" + numFiltered,
+          filteredCount > 0 && filteredCount < numFiltered); // Expect partial results
+    }
+  }
+
   private float getSimilarity(V[] vectors, V queryVector, int targetVisited) {
     assertTrue(targetVisited >= 0 && targetVisited <= numDocs);
     if (targetVisited == 0) {
@@ -525,5 +585,95 @@ abstract class BaseVectorSimilarityQueryTestCase<
       }
     }
     return dir;
+  }
+
+  private static class CountingQueryTimeout implements QueryTimeout {
+    private int remaining;
+
+    public CountingQueryTimeout(int count) {
+      remaining = count;
+    }
+
+    @Override
+    public boolean shouldExit() {
+      if (remaining > 0) {
+        remaining--;
+        return false;
+      }
+      return true;
+    }
+  }
+
+  /**
+   * A {@link Query} that emulates {@link Weight#count(LeafReaderContext)} by counting number of
+   * docs of underlying {@link Scorer#iterator()}. TODO: This is a workaround to count partial
+   * results of {@link #delegate} because {@link TimeLimitingBulkScorer} immediately discards
+   * results after timeout.
+   */
+  private static class CountingQuery extends Query {
+    private final Query delegate;
+
+    private CountingQuery(Query delegate) {
+      this.delegate = delegate;
+    }
+
+    @Override
+    public Weight createWeight(IndexSearcher searcher, ScoreMode scoreMode, float boost)
+        throws IOException {
+      return new Weight(this) {
+        final Weight delegateWeight = delegate.createWeight(searcher, scoreMode, boost);
+
+        @Override
+        public Explanation explain(LeafReaderContext context, int doc) throws IOException {
+          return delegateWeight.explain(context, doc);
+        }
+
+        @Override
+        public ScorerSupplier scorerSupplier(LeafReaderContext context) throws IOException {
+          return delegateWeight.scorerSupplier(context);
+        }
+
+        @Override
+        public int count(LeafReaderContext context) throws IOException {
+          Scorer scorer = scorer(context);
+          if (scorer == null) {
+            return 0;
+          }
+
+          int count = 0;
+          DocIdSetIterator iterator = scorer.iterator();
+          while (iterator.nextDoc() != NO_MORE_DOCS) {
+            count++;
+          }
+          return count;
+        }
+
+        @Override
+        public boolean isCacheable(LeafReaderContext ctx) {
+          return delegateWeight.isCacheable(ctx);
+        }
+      };
+    }
+
+    @Override
+    public String toString(String field) {
+      return String.format(
+          Locale.ROOT, "%s[%s]", getClass().getSimpleName(), delegate.toString(field));
+    }
+
+    @Override
+    public void visit(QueryVisitor visitor) {
+      visitor.visitLeaf(this);
+    }
+
+    @Override
+    public boolean equals(Object obj) {
+      return sameClassAs(obj) && delegate.equals(((CountingQuery) obj).delegate);
+    }
+
+    @Override
+    public int hashCode() {
+      return delegate.hashCode();
+    }
   }
 }
